Omit wrapped selection for text under inline containing block.

If the containing block 'A' for a collection of inline text boxes
is inline and the selection continues, we no longer paint a
wrapped selection highlight for the last inline text box in 'A'.

BUG=620298

Review-Url: https://codereview.chromium.org/2728263002
Cr-Commit-Position: refs/heads/master@{#455414}

Former-commit-id: a120b02dfcaecf58c41dd1ab19baac901249b197